<resources>
    <string name="app_name">quiz app</string>
    <string name="guni_ce">GUNI@CE</string>
    <string name="your_score">Your Score:</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next">Next</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="question">Question?</string>
</resources>